x-small query horizontal scrollbar fix

--- a/style.css
+++ b/style.css
@@ -515,16 +515,16 @@ QUERY INDICATIONS desktop to mobile
     }
 
     main{
-        width: calc(100vw - 40px);
+        width: calc(100% - 40px);
         margin-left: 40px;
     }
 
     .upgrade-bar{
-        width: calc(100vw - 40px);
+        width: calc(100% - 40px);
     }
 
     main .content{
-        width: calc(100vw - 40px);
+        width: calc(100% - 40px);
         margin-top: 60px;
         min-width: 240px;
     }
